<resources>
    <string name="app_name">Simple Calc</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">*</string>
    <string name="devide">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="calc">calculate</string>
    <string name="second">2nd</string>
    <string name="exponent">^</string>
    <string name="dot">.</string>
    <string name="result">result</string>
    <string name="prompt">enter an equation</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
</resources>
